# opaque-sql

./: .clang-format  .gitignore  .jvmopts  .scalafmt.conf  .tags  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  build.sbt  employees.json  employees_truncated.json  enc_join.scala  enc_join.txt  format.sh  gen_pubkey_header.sh  genindex.html  idlist.json  index.html  load.scala  make.bat  objects.inv  opaque-diagram.tiff  opaqueenv  person.json  scalastyle-config.xml  search.html  searchindex.js  setup-script.sh  test.scala  type_test.txt  user1.crt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support.md
.github/scripts/: build.sh  install-deps.sh  setup-env.sh  test.sh
.github/workflows/: docs.yml  main.yml
.hooks/: install-pre-commit  install-pre-push  pre-commit  pre-commit-hook-install.sh  pre-push  pre-push-hook-install.sh  pre-push-hook.sh
_sources/: index.rst.txt
_sources/install/: install.rst.txt
_sources/usage/: client.rst.txt  functionality.rst.txt  untrusted.rst.txt  usage.rst.txt
_static/: pygments.css
_static/styles/: furo.css  furo.css.map
benchmarking/: benchmarking.html
contributing/: contributing.html
data/: fetch-data.sh  fetch-test-data.sh
data/disease/: cpt_treatments.csv  synth-disease-data  synth_disease_data.py
data/pagerank/: PageRank256.in
data/tpcds/: synth-tpcds-data
data/tpch/: synth-tpch-benchmark-data  synth-tpch-data  synth-tpch-test-data
demo/: demo.md  opaque-demo.org
dfEncrypted/data/: .part-00000.crc  part-00000
dfEncrypted2/: .schema.crc  schema
dfEncrypted2/data/: .part-00000.crc  part-00000
docker/: Dockerfile  Dockerfile_hardware  Dockerfile_simulate  README.md
docs/: .buildinfo  Makefile  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/docs/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js
docs/install/: install.html
docs/src/: conf.py  index.rst
docs/usage/: functionality.html  usage.html
install/: install.html
keys/: client_key.txt  key_share.txt
notes/: 2016-03-18-qed.scala  2016-04-03.org
opaque-sql-docs/src/: conf.py
project/: BuildType.scala  SparkBuild.scala  plugins.sbt
project/resources/: run-tests.gdb
scripts/: install.sh
sql/enclave/: Makefile  app  build.sh  fetch-data.sh  script.sh
src/: conf.py  index.rst  truce.config
src/cpp/: CMakeLists.txt
src/cpp/Enclave/: BroadcastNestedLoopJoin.cpp  Enclave.cpp  Filter.cpp  FlatbuffersReaders.h  FlatbuffersWriters.h  Limit.cpp  Limit.h  NonObliviousSortMergeJoin.cpp  Sort.cpp
src/cpp/app/: App.cpp  CMakeLists.txt  app.cpp  app.h  errlist.h
src/cpp/common/: common.h  jni_md.h  m_crypto.cpp
src/cpp/enclave/: CMakeLists.txt  Enclave.conf  Enclave.cpp  ExpressionEvaluation.h  Flatbuffers.h  FlatbuffersReaders.cpp  aggregate.cpp  broadcast_nested_loop_join.cpp  enclave.cpp  enclave.edl  expression_evaluation.h  filter.cpp  flatbuffers.cpp  flatbuffers.h  flatbuffers_writers.cpp  limit.cpp  non_oblivious_sort_merge_join.cpp  project.cpp  sort.cpp  util.cpp  util.h
src/cpp/enclave/crypto/: crypto_context.h  ks_crypto.cpp  ks_crypto.h  random.cpp  random.h  sgxaes.cpp  sgxaes.h  sgxaes_asm.S
src/cpp/enclave/flatbuffer_helpers/: expression_evaluation.h  flatbuffers.h  flatbuffers_readers.cpp  flatbuffers_readers.h  flatbuffers_writers.cpp  flatbuffers_writers.h
src/cpp/enclave/physical_operators/: aggregate.cpp  aggregate.h  broadcast_nested_loop_join.cpp  broadcast_nested_loop_join.h  filter.cpp  filter.h  limit.cpp  non_oblivious_sort_merge_join.cpp  project.cpp  sort.cpp
src/cpp/service_provider/: CMakeLists.txt  KeyGen.cpp  ServiceProviderJNI.cpp  agent_wget.h  base64.c  base64.h  ecp.h  json.hpp  service_provider.cpp  service_provider_jni.cpp
src/cpp/service_provider/httpparser/: LICENSE  response.h
src/enclave/: CMakeLists.txt  Makefile  README.txt  benchmark.sh  build.sh
src/enclave/App/: App.cpp  App.h  CMakeLists.txt  Errlist.h  SGXEnclave.h  network_ra.cpp  org_apache_spark_sql_SGXEnclave.h  remote_attestation_result.h  service_provider.cpp  service_provider.h
src/enclave/App/Edger8rSyntax/: Arrays.cpp
src/enclave/App/TrustedLibrary/: Libc.cpp  Libcxx.cpp
src/enclave/Common/: KpiCrypto.cpp  KpiCrypto.h  common.h  mCrypto.cpp  mCrypto.h
src/enclave/Enclave/: Aggregate.cpp  Aggregate.h  Aggregate.tcc  Attestation.cpp  Attestation.h  BroadcastNestedLoopJoin.cpp  BroadcastNestedLoopJoin.h  CMakeLists.txt  ColumnSort.cpp  ColumnSort.h  ColumnSortOperations.h  Crypto.cpp  Crypto.cpp.save  Crypto.h  DataGen.cpp  DataGen.h  Enclave.conf  Enclave.cpp  Enclave.edl  Enclave.h  EnclaveContext.h  EncryptedDAG.cpp  ExpressionEvaluation.h  Filter.cpp  Filter.h  Flatbuffers.cpp  Flatbuffers.h  FlatbuffersReaders.cpp  FlatbuffersReaders.h  FlatbuffersWriters.cpp  FlatbuffersWriters.h  IntegrityUtils.cpp  IntegrityUtils.h  Join.cpp  Join.h  Limit.cpp  Limit.h  NewInternalTypes.cpp  NewInternalTypes.h  NonObliviousSortMergeJoin.cpp  (+22 more)
src/enclave/Enclave/Edger8rSyntax/: Arrays.cpp  Functions.edl  Pointers.edl
src/enclave/Enclave/TrustedLibrary/: Libc.edl
src/enclave/Include/: EncryptedBatch.fbs  define.h  jni.h  jni_md.h  user_types.h
src/enclave/ServiceProvider/: CMakeLists.txt  KeyGen.cpp  Main.cpp  Main.h  SP.h  ServiceProvider.cpp  ServiceProvider.h  ServiceProviderJNI.cpp  agent.h  agent_wget.cpp  agent_wget.h  base64.c  base64.h  crypto.cpp  crypto.h  ecp.cpp  ecp.h  ias_ra.cpp  ias_ra.h  iasrequest.cpp  iasrequest.h  json.hpp  remote_attestation_result.h  service_provider.cpp  service_provider.h  sp_crypto.cpp  sp_crypto.h
src/enclave/ServiceProvider/httpparser/: httpresponseparser.h  response.h
src/enclave/sample_libcrypto/: sample_libcrypto.h
src/flatbuffers/: AggExpr.fbs  EncryptedBlock.fbs  Expr.fbs  FilterExpr.fbs  JoinExpr.fbs  Rows.fbs  SQLInterface.fbs  SortExpr.fbs  expressions.fbs  operators.fbs
src/keystore/: Makefile  key_store.cpp
src/protobuf/: client.proto  listener.proto
src/python/: __init__.py  dataframe_attrs.py  intp_handler.py  (+5 more)
usage/: client.html  functionality.html  untrusted.html  usage.html
(+296 files in other folders)
